--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,9 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
+    //spring-boot-starter-data-jpa: 스프링 부트용 Spring Data Jpa 추상화 라이브러리 , 스프링 부트 버전에 맞춰 자동으로 JPA 관련 라이브러리들의 버전 관리
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    // 인메모리 관계형 데이터 베이스  , 메모리에서 실행되기 때문에 어플리케이션을 재시작 할때마다 초기화됨
+    compile('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
